Fix the x button
I fixed the x button not showing up some resoultion

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@
 .contentjs2 {
   z-index: 999;
   width: 327px;
+  overflow: auto;
   height: 718px;
   left: 16px;
   padding: 16px 16px 16px 20px;
@@ -1740,6 +1741,12 @@ section */
     position: absolute;
   }
 
+  .brb {
+    margin: 0;
+    overflow-x: scroll;
+    width: 100%;
+  }
+
   .see-project2 {
     display: none;
   }
@@ -1993,7 +2000,7 @@ section */
     display: grid;
     grid-template-columns: auto;
     height: 1805px;
-    width: 1204px;
+    width: 1392;
     left: 118px;
     top: 948px;
     border-radius: 0;
@@ -2054,7 +2061,7 @@ section */
     left: 24px;
     top: 296px;
     border-radius: 0;
-    width: 1156px;
+    width: 100%;
     height: 1379px;
   }
 
@@ -2957,8 +2964,9 @@ section */
   .contentjs2 {
     display: hidden;
     height: 584px;
-    width: 1156px;
+    width: 1150px;
     left: 20px;
+    overflow: auto;
     top: 400px;
     z-index: 999;
     margin: 112px 142px;
